3.04.11
Removed phetcommon tab, which was used for testing purposes.
Clicking on the background de-selects the highlighted element (if any).
Fixed: Connected wires look as if there is a gap between the copper part of the wires.
Fixed: When dragging a junction in a connected circuit, there becomes a gap in the electron flow 2 components away.

3.04.10 (12-12-2006)
Added a launch file for DC Only version.

3.04.09 (10-9-2006)
Fixed grab bag button & toolbox so they don't obscure one another.

3.04.08 (10-9-2006)
Bugfix: Grab bag button obscured the toolbox at low resolution.

3.04.07 (10-9-2006)
Generalized the about dialog, added spanish, etc.

3.04.04 (10-9-2006)
Feasibility test for repainting problem workaround.

3.04.03 (10-9-2006)
Reduced bulb size 75% to match previous version.
Reduced battery size and fixed aspect ratio to match previous version.
Reduced voltmeter size to match previous version.
Bugfix: right-click causes some components to jump around.
Bugfix: single left-click causes components to jump around.

3.04.01 (10-9-2006)
Added a cursor hand to the phet logo, which links to main page.
Added an improved about dialog, with license, projects, link to main page, and phet icon.

3.04.00 (10-9-2006)
Finished main body of piccolo translation, still needs thorough testing.

3.03.06 (10-5-2006)
Piccolo version includes most tools, most functionality.

3.03.02 (9-20-2006)
Partial completion of translation to Piccolo.

3.02.02 (9-3-2006)
Added local jnlp file implementation.
Switched to Windows look and feel preferred over Ocean.
Bugfix: AC Circuit with open switch crashes (see MNACircuit line 524)

3.02.01 (8-21-2006)
Renamed "sp" to "es" for internationalization.

3.01.12
Added "(DC & AC)" to the title.

3.01.11 (7-10-2006)
Added a Pause/Play/Step control panel.
Moved the charges from the centerline of a capacitor, when there is only 1 column of charges.
Bugfix: Stopwatch was intercepting mouse events (even when disabled).

3.01.10 (7-10-2006) 